debugging various visibility issues at endgame

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -78,9 +78,12 @@ body {
   font-size: 20px;
   border-radius: 12px;
   padding: 14px 40px;
+  display: none;
+  position:absolute;
 }
 
 #scoretable {
+  display: block;
   position: absolute;
   text-align: center;
   font-size: 3rem;
